<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/Afpa">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textColor="@color/aqua"
        app:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/dev_dep"/>

    <Spinner
        android:id="@+id/spDevDep"
        style="@style/Wrap"
        android:background="@color/violet"
        android:popupBackground="@color/violet" />
    <!-- android:entries="@array/liste_devises" /> -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textColor="@color/aqua"
        app:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/dev_arr"/>

    <Spinner
        android:id="@+id/spDevArr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/violet"
        android:popupBackground="@color/violet" />
        <!-- android:entries="@array/liste_devises" /> -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textColor="@color/aqua"
        app:fontFamily="@font/annie_use_your_telescope"
        android:text="@string/edt_montant"/>

    <EditText
        android:id="@+id/edtMontant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textColor="@color/aqua"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnConvert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_convert"
            android:onClick="clicConvertir"
            />

        <Button
            android:id="@+id/btnConvertAR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_convert_ar"
            android:onClick="clicConvertirAR"
            />

        <Button
            android:id="@+id/btnQuitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_quit"
            android:onClick="clicQuitter"
            />
    </LinearLayout>

</LinearLayout>